--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -176,12 +176,12 @@
                 {% endif %}
             </div>
             {% endfor %}
-            <!-- Button container with Sign Up and Back button -->
             <div class="button-container">
                 <a href="{% url 'login' %}" class="back-button">Back</a>
                 <button type="submit">Sign Up</button>
             </div>
         </form>
+        <p>A verification OTP will be sent to your email after registration.</p>
     </div>
 </body>
 </html>
