--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Heart Disease Predictor</h1>
+        <h1>Heart Disease Prediction</h1>
         <p>Empowering Health Decisions for a Better Tomorrow</p>
         <a href="{% url 'login' %}" class="btn">Login</a>
         <a href="{% url 'register' %}" class="btn btn-secondary">Register</a>
