--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -180,7 +180,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Health Predictions</h5>
                         <p class="card-text">Analyze patient health and predict risks.</p>
-                        <a href="{% url 'health_predictions' %}" class="btn btn-custom">Start Analysis</a>
+                        <a href="{% url 'health_predictions_form' %}" class="btn btn-custom">Start Analysis</a>
                     </div>
                 </div>
             </div>
