--- a/templates/users/successfully_logged_in.html
+++ b/templates/users/successfully_logged_in.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <!-- Back button positioned at the top-left -->
-    <a href="{% url 'home' %}" class="back-btn">Go to HomePage</a>
+    <a href="{% url 'doctor_dashboard' %}" class="back-btn">Back</a>
     <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
     
     <div class="container">
